@@ -2,7 +2,10 @@ package kw.zeropick.home.service;
 
 import java.util.List;
 import kw.zeropick.common.LoginUser;
+import kw.zeropick.home.dto.response.HomeResponse;
 import kw.zeropick.home.dto.response.ProductBestResponse;
+import kw.zeropick.member.domain.MemberInterest;
+import kw.zeropick.member.service.MemberService;
 import kw.zeropick.product.domain.Category;
 import kw.zeropick.product.domain.Product;
 import kw.zeropick.product.domain.ProductSort;
@@ -26,6 +29,7 @@ import java.util.stream.Collectors;
 public class HomeServiceImpl implements HomeService {
     private final ProductService productService;
     private final ReviewService reviewService;
+    private final MemberService memberService;
 
     @Override
     public List<ProductBestResponse> categoryBest(Long memberId, Category category) {
@@ -59,69 +63,107 @@ public class HomeServiceImpl implements HomeService {
 
         return bestResponses;
     }
-    
+//
+//    @Override
+//    @Transactional
+//    public ProductBestResponse toProductBestResponse (Product product){
+//        Long memberId = null;
+//        try {
+//            memberId = LoginUser.get().getId(); // 로그인 사용자 정보 가져오기
+//        } catch (Exception e) {
+//            // 비회원인 경우 memberId는 null로 설정
+//        }
+//
+//        ProductBestResponse.ProductBestResponseBuilder builder = ProductBestResponse.builder()
+//                .id(product.getId())
+//                .productName(product.getProductName())
+//                .category(product.getCategory())
+//                .zeroSugar(product.getZeroSugar())
+//                .zeroKcal(product.getZeroKcal())
+//                .price(product.getPrice())
+//                .starRate(product.getStarRate())
+//                .imageUrl(product.getImageUrl())
+//                .reviewCount(product.getReviewCount());
+//
+//        if (memberId != null) { // 회원일 경우
+//            builder.bookmarked(productService.isBookmarkedByUser(product.getId(), memberId))
+//                    .compared(productService.isComparedByUser(product.getId(), memberId));
+//        } else { // 비회원일 경우
+//            builder.bookmarked(null)
+//                    .compared(null);
+//        }
+//
+//        return builder.build();
+//    }
+
     @Override
     @Transactional
-    public ProductBestResponse toProductBestResponse (Product product){
-        Long memberId = null;
-        try {
-            memberId = LoginUser.get().getId(); // 로그인 사용자 정보 가져오기
-        } catch (Exception e) {
-            // 비회원인 경우 memberId는 null로 설정
-        }
+    public HomeResponse getHomeResponse(String token) {
+        HomeResponse.HomeResponseBuilder responseBuilder = HomeResponse.builder();
 
-        ProductBestResponse.ProductBestResponseBuilder builder = ProductBestResponse.builder()
-                .id(product.getId())
-                .productName(product.getProductName())
-                .category(product.getCategory())
-                .zeroSugar(product.getZeroSugar())
-                .zeroKcal(product.getZeroKcal())
-                .price(product.getPrice())
-                .starRate(product.getStarRate())
-                .imageUrl(product.getImageUrl())
-                .reviewCount(product.getReviewCount());
-
-        if (memberId != null) { // 회원일 경우
-            builder.bookmarked(productService.isBookmarkedByUser(product.getId(), memberId))
-                    .compared(productService.isComparedByUser(product.getId(), memberId));
-        } else { // 비회원일 경우
-            builder.bookmarked(null)
-                    .compared(null);
-        }
-
-        return builder.build();
-    }
-
-    @Override
-    @Transactional
-    public List<ProductBestResponse> getTopPopularityProducts ( int limit, String token){
-        // 인기 상품 검색 요청 생성
-        ProductSearchRequest productSearchRequest = ProductSearchRequest.builder()
-                .zeroKcal(Boolean.TRUE)
-
+        // 공통 인기 상품 검색 요청 생성
+        ProductSearchRequest popularRequest = ProductSearchRequest.builder()
                 .sort(ProductSort.POPULARITY)
                 .build();
 
-        // 상품 검색 서비스 호출 (limit 개수만 가져옴)
-        Page<ProductDto> productDtos = productService.productSearch(1L, 0, limit, productSearchRequest);
+        // 인기 상품 검색 (4개)
+        List<ProductBestResponse> topPopularityProducts = productService.productSearch(1L, 0, 4, popularRequest)
+                .getContent()
+                .stream()
+                .map(this::toProductBestResponse)
+                .collect(Collectors.toList());
 
-        // ProductDto 리스트를 ProductBestResponse로 매핑
-        return productDtos.getContent().stream()
-                .map(productDto -> ProductBestResponse.builder()
-                        .id(productDto.getId())
-                        .productName(productDto.getProductName())
-                        .category(productDto.getCategory())
-                        .zeroSugar(productDto.getZeroSugar())
-                        .zeroKcal(productDto.getZeroKcal())
-                        .price(productDto.getPrice())
-                        .starRate(productDto.getStarRate())
-                        .imageUrl(productDto.getImageUrl())
-                        .reviewCount(productDto.getReviewCount())
-                        .reviewResponse(null) // 리뷰 관련 로직 필요 시 업데이트
-                        .bookmarked(productDto.getBookmarked())
-                        .compared(productDto.getCompared())
-                        .build()
-                )
-                .toList();
+        responseBuilder.topPopularityProducts(topPopularityProducts);
+
+        // 회원일 경우 추가적으로 추천 상품을 검색
+        if (token != null) {
+            MemberInterest memberInterest = memberService.getMemberInterest(1L);
+
+            ProductSearchRequest recommendedRequest = createRecommendedRequest(memberInterest);
+
+            List<ProductBestResponse> recommendedProducts = productService.productSearch(1L, 0, 4, recommendedRequest)
+                    .getContent()
+                    .stream()
+                    .map(this::toProductBestResponse)
+                    .collect(Collectors.toList());
+
+            responseBuilder.recommendedProducts(recommendedProducts);
+        }
+
+        return responseBuilder.build();
     }
+
+    private ProductBestResponse toProductBestResponse(ProductDto productDto) {
+        return ProductBestResponse.builder()
+                .id(productDto.getId())
+                .productName(productDto.getProductName())
+                .category(productDto.getCategory())
+                .zeroSugar(productDto.getZeroSugar())
+                .zeroKcal(productDto.getZeroKcal())
+                .price(productDto.getPrice())
+                .starRate(productDto.getStarRate())
+                .imageUrl(productDto.getImageUrl())
+                .reviewCount(productDto.getReviewCount())
+                .bookmarked(productDto.getBookmarked())
+                .compared(productDto.getCompared())
+                .build();
+    }
+
+    private ProductSearchRequest createRecommendedRequest(MemberInterest memberInterest) {
+        ProductSearchRequest.ProductSearchRequestBuilder requestBuilder = ProductSearchRequest.builder()
+                .sort(ProductSort.POPULARITY);
+
+        if (memberInterest == MemberInterest.BOTH) {
+            requestBuilder.zeroSugar(true).zeroKcal(true);
+        } else if (memberInterest == MemberInterest.ZEROKCAL) {
+            requestBuilder.zeroSugar(false).zeroKcal(true);
+        } else if (memberInterest == MemberInterest.ZEROSUGAR) {
+            requestBuilder.zeroSugar(true).zeroKcal(false);
+        } else if (memberInterest == MemberInterest.NONE) {
+            requestBuilder.zeroSugar(false).zeroKcal(false);
+        }
+
+        return requestBuilder.build();
+    }
+
 }
